[package]
name = "crunchvanity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "0.17.0", features = ["abigen", "ws", "rustls", "ethers-solc"] }
rayon = "1.5.3"
sha2 = "0.10.2"
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"] }
